Add comprehensive test suite for RAG template project
This commit adds a complete test suite covering various components of the RAG template project, including:
- Materializers for state graphs and vector stores
- Utility functions for graph operations, serialization, and vector store management
- Fixtures and mock objects to support thorough testing
- Test coverage for key functionalities like saving, loading, and retrieving data

The tests include error handling, roundtrip tests, and validation of core RAG pipeline components.

--- a/template/requirements.txt
+++ b/template/requirements.txt
@@ -2,9 +2,15 @@ zenml>=0.73.0
 langgraph
 langchain
 langchain_community
+langchain-core
 dill
 langchain_openai
 unstructured[md]
 rich
 dill
 faiss-cpu
+
+# Test dependencies
+pytest>=7.4.0
+pytest-mock>=3.11.1
+pytest-cov>=4.1.0
