Enhance vector store configuration and ingestion with robust error handling
This commit introduces several improvements to vector store configuration and document ingestion:
- Replace string-based vector store types with an Enum (VectorStoreType)
- Add comprehensive error handling and logging in ingest_and_embed step
- Update requirements.txt with commented vector store backend options
- Modify configuration validation to support new vector store type
- Enhance test coverage for configuration and error scenarios

--- a/template/requirements.txt
+++ b/template/requirements.txt
@@ -8,7 +8,12 @@ langchain_openai
 unstructured[md]
 rich
 dill
-faiss-cpu
+
+# Vector store backends (comment out what you don't need)
+faiss-cpu  # For CPU-based FAISS
+# faiss-gpu  # For GPU-based FAISS (uncomment if needed)
+# chromadb  # For Chroma vector store
+# pinecone-client  # For Pinecone vector store
 
 # Test dependencies
 pytest>=7.4.0
